--- a/public/Kanbas/Account/Profile/screen.html
+++ b/public/Kanbas/Account/Profile/screen.html
@@ -4,28 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
+    <link rel="stylesheet" href="/Kanbas/styles.css" />
+   <link rel="stylesheet" href="/Kanbas/Navigation/index.css" />
+   <link
+   rel="stylesheet"
+   href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+   />
 </head>
 <body>
     <table>
         <tbody>
           <tr>
-            <td valign="top"><ul>
-                <li><a href="/Kanbas/Account/Profile/screen.html">
-                   Account</a></li>
+            <td valign="top"><ul class="wd-kanbas-navigation">
+                <li><a href="http://northeastern.edu">N</a></li>
+                <li class="wd-active"><a href="/Kanbas/Account/Profile/screen.html"><i class="fas fa-user"></i>Account</a></li>
                 <li>
-                 <a href="/Kanbas/Dashboard/screen.html">Dashboard</a>
+                  <a href="/Kanbas/Dashboard/screen.html">
+                   <i class="fas fa-tachometer-alt"></i> Dashboard</a>
                 </li>
-                <li>
-                 <a href="/Kanbas/Courses/Home/screen.html">Courses</a>
-                </li>
-                <li>
-                 <a href="/Kanbas/Calendar/index.html">Calendar</a></li>
-                <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-                <li><a href="/Kanbas/History/index.html">History</a></li>
-                <li><a href="/Kanbas/Studio/index.html">Studio</a></li>
-                <li><a href="/Kanbas/Commons/index.html">Commons</a></li>
-                <li><a href="/Kanbas/Help/index.html">Help</a></li>
-               </ul></td>
+                <li><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i>Courses</a> </li>
+                <li><a href="#"><i class="fa fa-calendar"></i> Calendar</a></li>
+                <li><a href="#"><i class="fas fa-inbox"></i>Inbox</a></li>
+                <li><a href="#"><i class="far fa-clock"></i>History</a></li>
+                <li><a href="#"><i class="fas fa-play-circle"></i>Studio</a></li>
+                <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Commons</a></li>
+                <li><a href="#"><i class="fas fa-question"></i> 
+                   <br>
+                   Help</a></li>
+              </ul></td>
             <td valign="top">
                 <ul>
                     <li>
