--- a/public/Kanbas/Courses/Navigation/index.html
+++ b/public/Kanbas/Courses/Navigation/index.html
@@ -4,9 +4,12 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Kanbas Navigation</title>
+   <link rel="stylesheet" href="/Kanbas/styles.css" />
+   <link rel="stylesheet" href="/Kanbas/Courses/Navigation/index.css" />
+   
 </head>
 <body>
-   <ul>
+   <ul class="wd-navigation">
       <li>
         <a href="/Kanbas/Courses/Home/screen.html">
           Home</a></li>
